put back loading + consolidated colors + negative buttons | #77

--- a/FlowCrypt/src/main/res/drawable/side_nav_bar.xml
+++ b/FlowCrypt/src/main/res/drawable/side_nav_bar.xml
@@ -10,6 +10,6 @@
         android:angle="135"
         android:centerColor="@color/colorPrimary"
         android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/de_york"
+        android:startColor="@color/colorPrimaryLight"
         android:type="linear" />
 </shape>
