--- a/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
@@ -15,7 +15,7 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/gallery" />
+                android:color="@color/aluminum" />
         </shape>
     </item>
 
