--- a/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message.xml
@@ -20,7 +20,7 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/gallery" />
+                android:color="@color/aluminum" />
         </shape>
     </item>
 
