--- a/FlowCrypt/src/main/res/layout/splash_after_auth.xml
+++ b/FlowCrypt/src/main/res/layout/splash_after_auth.xml
@@ -21,7 +21,20 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="0dp" />
-
+        android:layout_marginBottom="0dp"
+        app:layout_constraintVertical_bias="0.367" />
+    <!--app:layout_constraintVertical_bias="0.405"-->
+    <TextView
+        android:id="@+id/textViewLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin_huge"
+        android:text="@string/loading"
+        android:textSize="@dimen/default_text_size_big"
+        android:textColor="@color/dark"
+        android:fontFamily="sans-serif-light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewAppLogo" />
 
 </android.support.constraint.ConstraintLayout>
