--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="default_margin_medium">10dp</dimen>
     <dimen name="default_margin_big">15dp</dimen>
     <dimen name="default_margin_very_big">20dp</dimen>
+    <dimen name="default_margin_huge">40dp</dimen>
 
     <dimen name="default_text_size_big">18sp</dimen>
     <dimen name="default_text_size_medium">16sp</dimen>
