--- a/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
@@ -6,22 +6,28 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingBottom="2dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="4dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="2dp"
     android:paddingTop="2dp">
+
+    <item android:gravity="left">
+        <shape>
+            <solid android:color="@android:color/white" />
+        </shape>
+    </item>
 
     <item android:gravity="left">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/aluminum" />
+                android:color="@color/light" />
         </shape>
     </item>
 
     <item android:gravity="left">
         <shape>
-            <size android:width="4dp" />
+            <size android:width="8dp" />
             <solid android:color="@color/gray" />
         </shape>
     </item>
