--- a/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message.xml
@@ -6,12 +6,13 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingBottom="2dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="4dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="2dp"
     android:paddingTop="2dp">
+
     <item>
         <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-            android:src="@drawable/lock_seamless_bg_alpha"
+            android:src="@drawable/lock_seamless_bg"
             android:tileMode="repeat" />
     </item>
 
@@ -20,13 +21,13 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/aluminum" />
+                android:color="@color/light" />
         </shape>
     </item>
 
     <item android:gravity="left">
         <shape>
-            <size android:width="4dp" />
+            <size android:width="8dp" />
             <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
