--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -29,13 +29,14 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/dark"
+                android:textColor="@color/gray"
                 android:textSize="@dimen/default_text_size_big"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                 app:layout_constraintRight_toLeftOf="@+id/textViewDate"
                 app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-                tools:text="tom@cryptup.org" />
+                app:layout_goneMarginLeft="@dimen/default_margin_medium"
+                tools:text="sender@flowcrypt.com" />
 
             <ImageButton
                 android:id="@+id/imageViewReplyAll"
@@ -45,6 +46,7 @@
                 android:contentDescription="@string/reply_all"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
                 app:layout_constraintTop_toTopOf="@+id/guidelineTop"
+                app:layout_goneMarginRight="@dimen/default_margin_medium"
                 app:srcCompat="@mipmap/ic_action_name" />
 
             <TextView
@@ -55,20 +57,22 @@
                 android:layout_marginTop="@dimen/margin_top_message_subject"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textColor="@color/dark"
+                android:textColor="@color/gray"
                 android:textSize="@dimen/default_text_size_medium"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                 app:layout_constraintRight_toLeftOf="@+id/textViewDate"
                 app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
-                tools:text="What up man? How are you doing? Tell me please" />
+                app:layout_goneMarginLeft="@dimen/default_margin_medium"
+                tools:text="Lorem ipsum subject subject subject subject subject" />
 
             <TextView
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark"
+                android:textColor="@color/gray"
                 android:textSize="@dimen/default_text_size_medium"
+                android:layout_marginRight="@dimen/default_margin_medium"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
                 app:layout_constraintTop_toTopOf="@+id/textViewSubject"
                 tools:text="1:05 PM" />
@@ -76,11 +80,9 @@
             <View
                 android:id="@+id/layoutFooterOfHeader"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/height_silver_line"
+                android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/default_margin_medium"
-                android:layout_weight="1"
-                android:background="@color/silver"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewSubject" />
@@ -89,7 +91,7 @@
                 android:id="@+id/layoutMessageParts"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin_content"
+                android:layout_marginTop="@dimen/default_margin_content_small"
                 android:orientation="vertical"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
@@ -101,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+                app:layout_constraintGuide_begin="0dp" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guidelineTop"
@@ -115,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="@dimen/default_margin_content" />
+                app:layout_constraintGuide_end="0dp" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
