--- a/FlowCrypt/src/main/res/layout/message_part_text.xml
+++ b/FlowCrypt/src/main/res/layout/message_part_text.xml
@@ -9,13 +9,14 @@
     android:id="@+id/textViewMessagePartText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/default_margin_medium"
+    android:paddingBottom="@dimen/default_margin_medium"
+    android:paddingLeft="@dimen/default_margin_medium"
+    android:paddingRight="@dimen/default_margin_medium"
+    android:background="@android:color/white"
     android:autoLink="web"
-    android:textColor="@color/dark"
+    android:textColor="@android:color/black"
     android:textIsSelectable="true"
     android:textSize="@dimen/default_text_size_medium"
-    tools:text="This email contains a key backup. It will help you access your encrypted messages from other computers (along with your pass phrase). You can safely leave it in your inbox or archive it.
+    tools:text="At nihil sequi quo maiores molestiae consequatur. Id aut nam voluptate doloribus saepe consequatur molestias. Eos sunt est ipsam accusantium saepe doloribus veritatis.
 
-The key below is protected with pass phrase that only you know. You should make sure to note your pass phrase down.
-
-DO NOT DELETE THIS EMAIL. Write me at tom@cryptup.org so that I can help. I respond very promptly." />
+Recusandae velit sit veniam asperiores nisi. Eius tempore ab voluptatum dolorum nihil qui beatae. Et cum aut iusto deserunt. Doloremque laudantium laborum nobis enim est a. Totam at minima velit perspiciatis magnam libero ut voluptate. Rerum labore consectetur hic aliquid." />
