--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -51,4 +51,6 @@
     <dimen name="margin_between_buttons">32dp</dimen>
     <dimen name="user_photo_size">48dp</dimen>
     <dimen name="margin_top_splash_icon">68dp</dimen>
+    <dimen name="layout_height_attachment_item">48dp</dimen>
+    <dimen name="layout_width_attachment_item">320dp</dimen>
 </resources>
