--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -9,7 +9,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.flowcrypt.email.ui.activity.fragment.MessageDetailsFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,10 +19,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/layoutContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:context="com.flowcrypt.email.ui.activity.fragment.MessageDetailsFragment"
-            tools:visibility="visible">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textViewSenderAddress"
@@ -39,15 +37,17 @@
                 tools:text="sender@flowcrypt.com" />
 
             <ImageButton
-                android:id="@+id/imageViewReplyAll"
+                android:id="@+id/imageButtonReplyAll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?android:attr/selectableItemBackground"
                 android:contentDescription="@string/reply_all"
+                android:visibility="gone"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
                 app:layout_constraintTop_toTopOf="@+id/guidelineTop"
                 app:layout_goneMarginRight="@dimen/default_margin_medium"
-                app:srcCompat="@mipmap/ic_action_name" />
+                app:srcCompat="@mipmap/ic_action_name"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/textViewSubject"
@@ -70,9 +70,9 @@
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/default_margin_medium"
                 android:textColor="@color/gray"
                 android:textSize="@dimen/default_text_size_medium"
-                android:layout_marginRight="@dimen/default_margin_medium"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
                 app:layout_constraintTop_toTopOf="@+id/textViewSubject"
                 tools:text="1:05 PM" />
@@ -80,24 +80,48 @@
             <View
                 android:id="@+id/layoutFooterOfHeader"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/height_silver_line"
+                android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/default_margin_medium"
-                android:background="@android:color/white"
+                android:background="@color/aluminum"
+                android:visibility="gone"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewSubject" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewSubject"
+                tools:visibility="visible" />
 
-            <LinearLayout
-                android:id="@+id/layoutMessageParts"
+            <FrameLayout
+                android:id="@+id/layoutMessagePartsContainer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_content_small"
-                android:orientation="vertical"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:minHeight="@dimen/min_height_layout_message_parts"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-                app:layout_constraintTop_toBottomOf="@+id/layoutFooterOfHeader" />
+                app:layout_constraintTop_toBottomOf="@+id/layoutFooterOfHeader">
+
+                <ProgressBar
+                    android:id="@id/viewIdProgressView"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+
+                <include
+                    android:id="@+id/viewIdStatusView"
+                    layout="@layout/sync_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/layoutMessageParts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+
+            </FrameLayout>
 
             <android.support.constraint.Guideline
                 android:id="@+id/guidelineLeft"
@@ -125,15 +149,8 @@
 
 
     <ProgressBar
-        android:id="@id/viewIdProgressView"
+        android:id="@+id/progressBarActionRunning"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-
-    <include
-        android:id="@+id/viewIdStatusView"
-        layout="@layout/sync_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
