Updated a logic of handle errors. | #67.

--- a/FlowCrypt/src/main/res/layout/sync_status.xml
+++ b/FlowCrypt/src/main/res/layout/sync_status.xml
@@ -28,6 +28,7 @@
         android:layout_marginLeft="@dimen/default_margin_content_small"
         android:layout_marginRight="@dimen/default_margin_content_small"
         android:layout_marginTop="@dimen/default_margin_content_small"
+        android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
