Renamed some files.

--- a/FlowCrypt/src/main/res/layout/activity_security_reply.xml
+++ b/FlowCrypt/src/main/res/layout/activity_security_reply.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.SecureReplyActivity">
+    tools:context="com.flowcrypt.email.ui.activity.ReplyActivity">
 
     <include layout="@layout/toolbar" />
 
