--- a/FlowCrypt/src/main/res/layout/activity_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/activity_secure_compose.xml
@@ -9,7 +9,7 @@
     android:id="@+id/screenContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.SecureComposeActivity">
+    tools:context="com.flowcrypt.email.ui.activity.ComposeActivity">
 
     <include layout="@layout/toolbar" />
 
