--- a/FlowCrypt/src/main/res/layout/activity_settings.xml
+++ b/FlowCrypt/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.SecureComposeActivity">
+    tools:context="com.flowcrypt.email.ui.activity.ComposeActivity">
 
     <include layout="@layout/toolbar" />
 
