--- a/FlowCrypt/src/main/res/layout/content_main_preferences.xml
+++ b/FlowCrypt/src/main/res/layout/content_main_preferences.xml
@@ -6,7 +6,7 @@
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/secureComposeFragment"
+    android:id="@+id/composeFragment"
     android:name="com.flowcrypt.email.ui.activity.fragment.MainSettingsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
