--- a/FlowCrypt/src/main/res/layout/content_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/content_secure_compose.xml
@@ -7,8 +7,8 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/secureComposeFragment"
-    android:name="com.flowcrypt.email.ui.activity.fragment.SecureComposeFragment"
+    android:id="@+id/composeFragment"
+    android:name="com.flowcrypt.email.ui.activity.fragment.ComposeFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
