--- a/FlowCrypt/src/main/res/layout/content_security_reply.xml
+++ b/FlowCrypt/src/main/res/layout/content_security_reply.xml
@@ -7,8 +7,8 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/secureReplyFragment"
-    android:name="com.flowcrypt.email.ui.activity.fragment.SecureReplyFragment"
+    android:id="@+id/replyFragment"
+    android:name="com.flowcrypt.email.ui.activity.fragment.ReplyFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
