--- a/FlowCrypt/src/main/res/layout/fragment_security_reply.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_security_reply.xml
@@ -6,7 +6,6 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -31,29 +30,39 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textViewReplyRecipient"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:id="@+id/textInputLayoutRecipients"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:padding="@dimen/default_margin_small"
-                android:textSize="@dimen/default_text_size_big"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="@dimen/default_margin_content_small"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-                app:layout_constraintRight_toLeftOf="@+id/progressBarCheckContactsDetails"
-                app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-                tools:text="tom@cryptup.org" />
-
-            <ProgressBar
-                android:id="@+id/progressBarCheckContactsDetails"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/textViewReplyRecipient"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-                app:layout_constraintTop_toTopOf="@+id/textViewReplyRecipient" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.flowcrypt.email.ui.widget.PgpContactsNachoTextView
+                        android:id="@+id/editTextRecipient"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:completionThreshold="2"
+                        android:enabled="false"
+                        android:paddingEnd="@dimen/size_of_small_progressbar"
+                        android:shrinkColumns="0, true" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <ProgressBar
+                    android:id="@+id/progressBarCheckContactsDetails"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="@dimen/size_of_small_progressbar"
+                    android:layout_height="@dimen/size_of_small_progressbar"
+                    android:layout_gravity="center_vertical|end"
+                    android:visibility="gone" />
+
+            </FrameLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutReplyEmailMessage"
@@ -62,14 +71,17 @@
                 android:layout_marginTop="@dimen/default_margin_content_small"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-                app:layout_constraintTop_toBottomOf="@+id/textViewReplyRecipient">
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRecipients">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextReplyEmailMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_compose_security_email"
-                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect" />
+                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect">
+
+                    <requestFocus />
+                </android.support.design.widget.TextInputEditText>
 
             </android.support.design.widget.TextInputLayout>
 
