--- a/FlowCrypt/src/main/res/layout/attachment_item.xml
+++ b/FlowCrypt/src/main/res/layout/attachment_item.xml
@@ -19,6 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:paddingLeft="@dimen/default_margin_content"
         android:paddingRight="@dimen/default_margin_content">
 
@@ -66,7 +68,6 @@
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/download"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
