--- a/FlowCrypt/src/main/res/layout/fragment_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_secure_compose.xml
@@ -39,15 +39,18 @@
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_bottom_line_gray">
 
                     <com.flowcrypt.email.ui.widget.PgpContactsNachoTextView
                         android:id="@+id/editTextRecipient"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
                         android:completionThreshold="2"
                         android:hint="@string/prompt_recipient"
                         android:paddingEnd="@dimen/size_of_small_progressbar"
+                        android:paddingTop="@dimen/default_margin_medium"
                         android:shrinkColumns="0, true" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -61,32 +64,37 @@
 
             </FrameLayout>
 
-
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_bottom_line_gray">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextEmailSubject"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:hint="@string/prompt_subject"
                     android:inputType="textEmailSubject|textCapSentences|textAutoCorrect"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:paddingTop="@dimen/default_margin_medium" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayoutEmailMessage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_bottom_line_transparent">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextEmailMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:hint="@string/prompt_compose_security_email"
-                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect" />
+                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
+                    android:paddingTop="@dimen/default_margin_medium" />
 
             </android.support.design.widget.TextInputLayout>
 
