--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -12,7 +12,7 @@
     android:orientation="vertical"
     tools:context="com.flowcrypt.email.ui.activity.fragment.MessageDetailsFragment">
 
-    <ScrollView
+    <com.flowcrypt.email.ui.widget.NonLockingScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -119,7 +119,9 @@
                     android:id="@+id/layoutMessageParts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/default_margin_small"
+                    android:paddingTop="@dimen/default_margin_small" />
 
             </FrameLayout>
 
@@ -145,7 +147,7 @@
                 app:layout_constraintGuide_end="0dp" />
 
         </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+    </com.flowcrypt.email.ui.widget.NonLockingScrollView>
 
 
     <ProgressBar
