--- a/FlowCrypt/src/main/res/layout/fragment_security_reply.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_security_reply.xml
@@ -91,6 +91,18 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <LinearLayout
+                android:id="@+id/layoutAttachments"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/default_margin_small"
+                android:paddingTop="@dimen/default_margin_small"
+                app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+                app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutReplyEmailMessage" />
+
             <android.support.constraint.Guideline
                 android:id="@+id/guidelineLeft"
                 android:layout_width="wrap_content"
