--- a/FlowCrypt/src/main/res/layout/content_secure_compose.xml
+++ b/FlowCrypt/src/main/res/layout/content_secure_compose.xml
@@ -8,7 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/composeFragment"
-    android:name="com.flowcrypt.email.ui.activity.fragment.base.BaseSendSecurityMessageFragment"
+    android:name="com.flowcrypt.email.ui.activity.fragment.base.CreateMessageFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
