--- a/FlowCrypt/src/main/res/layout/activity_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/activity_create_message.xml
@@ -9,7 +9,7 @@
     android:id="@+id/screenContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.ComposeActivity">
+    tools:context="com.flowcrypt.email.ui.activity.CreateMessageActivity">
 
     <include layout="@layout/toolbar" />
 
