--- a/FlowCrypt/src/main/res/layout/fragment_splash.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_splash.xml
@@ -45,6 +45,7 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:layout_marginTop="54dp"
+        android:contentDescription="@string/app_name"
         android:drawablePadding="@dimen/default_margin_medium"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
@@ -52,7 +53,6 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="@dimen/text_size_logo_crypt"
-        android:contentDescription="@string/app_name"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -91,5 +91,16 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
+
+    <Button
+        android:id="@+id/buttonOtherEmailProvider"
+        style="@style/AppWidget.Button.White.ConnectAccount"
+        android:layout_marginTop="@dimen/default_margin_big"
+        android:drawableStart="@mipmap/ic_email"
+        android:text="@string/other_email_provider"
+        android:theme="@style/AppWidget.Button.White.ConnectAccount"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSignInWithGmail" />
 
 </android.support.constraint.ConstraintLayout>
