--- a/FlowCrypt/src/main/res/layout/activity_add_new_account.xml
+++ b/FlowCrypt/src/main/res/layout/activity_add_new_account.xml
@@ -14,10 +14,25 @@
 
     <include layout="@layout/toolbar" />
 
-    <include
-        android:id="@+id/layoutContent"
-        layout="@layout/content_add_new_account"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <include
+            android:id="@+id/layoutContent"
+            layout="@layout/content_add_new_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <include
+            android:id="@+id/progressView"
+            layout="@layout/check_account_credentionals"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+    </FrameLayout>
+
 
 </LinearLayout>
