--- a/FlowCrypt/src/main/res/layout/content_add_new_account.xml
+++ b/FlowCrypt/src/main/res/layout/content_add_new_account.xml
@@ -247,7 +247,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
-            android:text="@string/require_sign_in"
+            android:text="@string/require_custom_sign_in"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinnerSmtpSecyrityType" />
 
@@ -277,7 +277,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:hint="@string/smtp_sign_in_username"
+                    android:hint="@string/smtp_username"
                     android:inputType="textEmailSubject"
                     android:maxLines="1"
                     android:paddingTop="@dimen/default_margin_medium" />
@@ -302,7 +302,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:ems="10"
-                    android:hint="@string/smtp_sign_in_password"
+                    android:hint="@string/smtp_password"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:paddingTop="@dimen/default_margin_medium" />
