Fixed a bug with send a reply message.

--- a/FlowCrypt/src/main/res/layout/fragment_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_create_message.xml
@@ -60,7 +60,8 @@
                     style="?android:attr/progressBarStyleSmall"
                     android:layout_width="@dimen/size_of_small_progressbar"
                     android:layout_height="@dimen/size_of_small_progressbar"
-                    android:layout_gravity="center_vertical|end" />
+                    android:layout_gravity="center_vertical|end"
+                    android:visibility="gone" />
 
             </FrameLayout>
 
