--- a/FlowCrypt/src/main/res/layout/activity_add_new_account_manually.xml
+++ b/FlowCrypt/src/main/res/layout/activity_add_new_account_manually.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.flowcrypt.email.ui.activity.AddNewAccountActivity">
+    tools:context="com.flowcrypt.email.ui.activity.AddNewAccountManuallyActivity">
 
     <include layout="@layout/toolbar" />
 
