--- a/FlowCrypt/src/main/res/layout/activity_splash.xml
+++ b/FlowCrypt/src/main/res/layout/activity_splash.xml
@@ -12,11 +12,11 @@
 
     <include
         android:id="@+id/signInView"
-        layout="@layout/content_splash"
-        android:visibility="gone" />
+        layout="@layout/content_splash" />
 
     <include
         android:id="@+id/splashView"
-        layout="@layout/splash_after_auth" />
+        layout="@layout/splash_after_auth"
+        android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
