--- a/FlowCrypt/src/main/res/layout/fragment_splash.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_splash.xml
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/app_name"
         android:drawablePadding="@dimen/default_margin_medium"
         android:fontFamily="sans-serif-medium"
@@ -69,19 +69,20 @@
         android:textColor="@android:color/black"
         android:textSize="@dimen/default_text_size_big"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
-        app:layout_constraintVertical_bias="0.23000002"
+        app:layout_constraintVertical_bias="0.215"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginTop="0dp"/>
 
     <Button
         android:id="@+id/buttonSignInWithGmail"
         style="@style/AppWidget.Button.White.ConnectAccount"
-        android:layout_marginTop="@dimen/margin_top_main_screen_button_sign_via_gmail"
+        android:layout_width="320dp"
+        android:layout_marginTop="48dp"
         android:drawableStart="@mipmap/ic_gmail"
         android:text="@string/continue_with_gmail"
         android:theme="@style/AppWidget.Button.White.ConnectAccount"
@@ -90,17 +91,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewConnectYourEmail"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"/>
 
     <Button
         android:id="@+id/buttonOtherEmailProvider"
         style="@style/AppWidget.Button.White.ConnectAccount"
+        android:layout_width="320dp"
         android:layout_marginTop="@dimen/default_margin_big"
         android:drawableStart="@mipmap/ic_email"
         android:text="@string/other_email_provider"
         android:theme="@style/AppWidget.Button.White.ConnectAccount"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSignInWithGmail" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSignInWithGmail"/>
 
 </android.support.constraint.ConstraintLayout>
