--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="default_single_dip">1dp</dimen>
 
     <dimen name="default_button_height">64dp</dimen>
+    <dimen name="default_button_width">320dp</dimen>
     <dimen name="default_height_for_click">64dp</dimen>
 
     <dimen name="default_margin_small">5dp</dimen>
@@ -55,4 +56,5 @@
     <dimen name="layout_height_attachment_item">48dp</dimen>
     <dimen name="layout_width_attachment_item">320dp</dimen>
     <dimen name="min_height_layout_message_parts">400dp</dimen>
+    <dimen name="first_button_padding">48dp</dimen>
 </resources>
