--- a/FlowCrypt/src/main/res/layout/activity_check_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_check_keys.xml
@@ -4,105 +4,125 @@
   ~ Contributors: DenBond7
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewSetupFlowCrypt"
-        android:text="@string/set_up_flow_crypt"
-        style="@style/ScreenHeading"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textViewCheckKeysTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top_found_backup"
-        android:gravity="center"
-        android:text="@string/found_backup_of_your_account_key"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/default_text_size_medium"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSetupFlowCrypt" />
+        <TextView
+            android:id="@+id/textViewSetupFlowCrypt"
+            style="@style/ScreenHeading"
+            android:text="@string/set_up_flow_crypt"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/default_margin_content"
-        android:layout_marginTop="@dimen/default_margin_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutKeyPassword"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCheckKeysTitle" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayoutKeyPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top_key_password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCheckKeysTitle"
-        app:passwordToggleContentDescription="description"
-        app:passwordToggleEnabled="true">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/editTextKeyPassword"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textViewCheckKeysTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/enter_your_pass_phrase"
-            android:inputType="textPassword" />
+            android:layout_marginTop="@dimen/margin_top_found_backup"
+            android:gravity="center"
+            android:text="@string/found_backup_of_your_account_key"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/default_text_size_medium"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/textViewSetupFlowCrypt" />
 
-    </android.support.design.widget.TextInputLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/default_margin_content"
+            android:layout_marginTop="@dimen/default_margin_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutKeyPassword"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/textViewCheckKeysTitle" />
 
-    <Button
-        android:id="@+id/buttonCheck"
-        style="@style/AppWidget.Button"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/margin_top_load_account"
-        android:theme="@style/AppWidget.Button.Green"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKeyPassword"
-        tools:text="@string/load_account" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayoutKeyPassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_top_key_password"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/textViewCheckKeysTitle"
+            app:passwordToggleContentDescription="description"
+            app:passwordToggleEnabled="true">
 
-    <Button
-        android:id="@+id/buttonNegativeAction"
-        style="@style/AppWidget.Button"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/margin_top_button_select_another_account"
-        android:theme="@style/AppWidget.Button.White"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCheck"
-        tools:text="@string/use_another_account" />
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/editTextKeyPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/enter_your_pass_phrase"
+                android:inputType="textPassword" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guidelineLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guidelineRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
+        <Button
+            android:id="@+id/buttonPositiveAction"
+            style="@style/AppWidget.Button"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_top_load_account"
+            android:theme="@style/AppWidget.Button.Green"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKeyPassword"
+            tools:text="@string/load_account" />
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/buttonNeutralAction"
+            style="@style/AppWidget.Button"
+            android:layout_width="0dp"
+            android:layout_marginTop="@dimen/margin_top_load_account"
+            android:theme="@style/AppWidget.Button.White"
+            android:visibility="gone"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/buttonPositiveAction"
+            tools:text="@string/use_existing_keys" />
+
+        <Button
+            android:id="@+id/buttonNegativeAction"
+            style="@style/AppWidget.Button"
+            android:layout_width="0dp"
+            android:layout_marginBottom="@dimen/margin_top_button_select_another_account"
+            android:layout_marginTop="@dimen/margin_top_button_select_another_account"
+            android:theme="@style/AppWidget.Button.White"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/buttonNeutralAction"
+            tools:text="@string/use_another_account" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guidelineLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guidelineRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
