Added "Enable ACRA" in the dev options.

--- a/FlowCrypt/src/main/res/values/strings_dev_settings.xml
+++ b/FlowCrypt/src/main/res/values/strings_dev_settings.xml
@@ -11,6 +11,7 @@
     <string name="preferences_key_is_write_logs_to_file_enable">preferences_key_is_write_logs_to_file_enable</string>
     <string name="preferences_key_get_results_servers">preferences_key_get_results_servers</string>
     <string name="preferences_key_is_detect_memory_leak_enable">preferences_key_is_detect_memory_leak_enable</string>
+    <string name="preferences_key_is_acra_enable">preferences_key_is_acra_enable</string>
 
     <!-- Strings related to Settings -->
     <string name="preferences_title_debugging">Debugging</string>
@@ -19,5 +20,6 @@
     <string name="preferences_category_title_logs">Logs</string>
     <string name="preferences_title_enable_write_api_logs_to_file">Enable write API logs to the file</string>
     <string name="preferences_title_enable_detect_memory_leak">Enable detect memory leak</string>
+    <string name="preferences_title_enable_acra">Enable ACRA(App Crash Reports)</string>
     <string name="action_dev_settings">Dev Settings</string>
 </resources>
